--- a/deploy/templete/vm_list.yaml
+++ b/deploy/templete/vm_list.yaml
@@ -1,7 +1,7 @@
-master:
-- name: manager
+nodes:
+- name: node01
   mac: 00:0C:29:6B:CA:02
-  disk: qcow2:/mnt/vm/sles_liub/sles12sp1-HA-liubin_manager.qcow2
+  disk: qcow2:/mnt/vm/sles_liub/sles12sp1-HA-liubin_node01.qcow2
   ostype: sles11
   vcpus: 2
   memory: 1024
@@ -11,10 +11,9 @@ master:
   graphics:
   os_settings:
   
-slave:
-- name: node01
+- name: node02
   mac: 00:0C:29:C9:21:D5
-  disk: qcow2:/mnt/vm/sles_liub/sles12sp1-HA-liubin_node01.qcow2
+  disk: qcow2:/mnt/vm/sles_liub/sles12sp1-HA-liubin_node02.qcow2
   ostype: sles11
   vcpus: 2
   memory: 1024
@@ -24,9 +23,9 @@ slave:
   graphics:
   os_settings:  
 
-- name: node02
+- name: node03
   mac: 00:0C:29:D7:4C:31
-  disk: qcow2:/mnt/vm/sles_liub/sles12sp1-HA-liubin_node02.qcow2
+  disk: qcow2:/mnt/vm/sles_liub/sles12sp1-HA-liubin_node03.qcow2
   ostype: sles11
   vcpus: 2
   memory: 1024
