--- a/deploy/templete/vm_list.yaml
+++ b/deploy/templete/vm_list.yaml
@@ -42,6 +42,6 @@ nodes:
   graphics:
   os_settings:
 
-storage:
+iscsi:
   target_ip: 147.2.207.237
   target_lun: iqn.2015-08.suse.bej.bliu:441a202b-6aa3-479f-b56f-374e2f38ba20
