--- a/deploy/confs/vm_list.yaml
+++ b/deploy/confs/vm_list.yaml
@@ -30,6 +30,10 @@ nodes:
   nic:
   graphics:
 
+devices:
+  disk_dir: /mnt/vm/sles_ha_auto/
+  nic: br0
+
 iscsi:
   target_ip: 147.2.207.237
   target_lun: iqn.2015-08.suse.bej.bliu:441a202b-6aa3-479f-b56f-374e2f38ba20
