add support for multiple iscsi targets as shared storage

--- a/deploy/confs/vm_list.yaml
+++ b/deploy/confs/vm_list.yaml
@@ -37,3 +37,10 @@ devices:
 iscsi:
   target_ip: 147.2.207.237
   target_lun: iqn.2015-08.suse.bej.bliu:441a202b-6aa3-479f-b56f-374e2f38ba20
+  shared_target_luns:
+  - shared_target_lun: iqn.2015-08.suse.bej.bliu:441a202b-6aa3-479f-b56f-374e2f38ba21
+    shared_target_ip: 147.2.207.236
+  - shared_target_lun: iqn.2015-08.suse.bej.bliu:441a202b-6aa3-479f-b56f-374e2f38ba22
+    shared_target_ip: 147.2.207.235
+  - shared_target_lun: iqn.2015-08.suse.bej.bliu:441a202b-6aa3-479f-b56f-374e2f38ba23
+    shared_target_ip: 147.2.207.232
