Support sharing_backing_file
Enable this feature by add "backing_file: base" and
"sharing_backing_file: yes" in yaml file.
It will create base_image in shared dir for all projects.
Image will be unique when a using same
distro/version/patch/build/disksize

In 8078574f3, change to "backing_file: yes". Support using
yes, true/false or lack of "backing_file"

--- a/deploy/confs/vm_list.yaml
+++ b/deploy/confs/vm_list.yaml
@@ -34,6 +34,7 @@ devices:
   disk_dir: /mnt/vm/sles_ha_auto/
   nic: br0
   backing_file: base
+  sharing_backing_file: yes
 
 iscsi:
   target_ip: 147.2.207.237
