Force to use vm-install in SLE12SP0.
virt-install in SLE12SP0 has bug, force to use vm-install instead.

--- a/deploy/scripts/config.ini
+++ b/deploy/scripts/config.ini
@@ -11,6 +11,9 @@ DUMMY_FOLDER=../dummy_temp/
 # Legacy vm-install will be removed, replace to virt-install
 VIRT_INSTALL=True
 
+# Force to use vm-install in SLE12SP0 due to virt-install bug
+VM_INSTALL_DETECT=True
+
 # Local NFS server for autoyast
 NFS_ENABLED=True
 NFS_LOCATION=/tmp/jenkins-work/ha-share/deploy/dummy_temp/nfs_share
