Add config switch of static IP.

--- a/deploy/scripts/config.ini
+++ b/deploy/scripts/config.ini
@@ -18,10 +18,13 @@ VM_INSTALL_DETECT=True
 NFS_ENABLED=True
 NFS_LOCATION=/tmp/jenkins-work/ha-share/deploy/dummy_temp/nfs_share
 
+[DEPLOY]
+# Use static IP instead of DHCP, set "STATIC_IP=True" to enable
+STATIC_IP=False
+
 [DEFAULT]
 # Remove autoyast file after installation
 CLEAN_UP=False
 
 # Enable/disable debug log
 DEBUG=False
-
