drbd testcases: Add DRBD fio testcases.
Support fio scenario:
    SeqRead
    SeqWrite
    RandomRead
    RandomWrite
    MixSeqReadWrite
    MixRandomReadWrite

--- a/deploy/scripts/testcases/config.ini
+++ b/deploy/scripts/testcases/config.ini
@@ -2,6 +2,9 @@
 # Name of DRBD test resource
 TEST_RESOURCE=1-single-2
 
+# Enable FIO_TEST in drbdAdvanced.py
+FIO_TEST=False
+
 [DEFAULT]
 # Enable/disable debug log
 DEBUG=False
