Clean autoyast and enable DRBD FIO_TEST by default.

--- a/deploy/scripts/config.ini
+++ b/deploy/scripts/config.ini
@@ -24,7 +24,7 @@ STATIC_IP=False
 
 [DEFAULT]
 # Remove autoyast file after installation
-CLEAN_UP=False
+CLEAN_UP=True
 
 # Enable/disable debug log
 DEBUG=False
