--- a/deploy/scripts/testcases/config.ini
+++ b/deploy/scripts/testcases/config.ini
@@ -3,7 +3,7 @@
 TEST_RESOURCE=1-single-2
 
 # Enable FIO_TEST in drbdAdvanced.py
-FIO_TEST=False
+FIO_TEST=True
 
 [DEFAULT]
 # Enable/disable debug log
