Add switch to allow root login and disable by default.

--- a/deploy/scripts/config.ini
+++ b/deploy/scripts/config.ini
@@ -22,6 +22,9 @@ NFS_LOCATION=/tmp/jenkins-work/ha-share/deploy/dummy_temp/nfs_share
 # Use static IP instead of DHCP, set "STATIC_IP=True" to enable
 STATIC_IP=False
 
+# Allow root account login
+PERMIT_ROOT_LOGIN=False
+
 [DEFAULT]
 # Remove autoyast file after installation
 CLEAN_UP=True
