Do not remove autoyast file by default.
With NFS, error may raise like not able to find autoyast after CLEAN_UP

--- a/deploy/scripts/config.ini
+++ b/deploy/scripts/config.ini
@@ -27,7 +27,7 @@ PERMIT_ROOT_LOGIN=False
 
 [DEFAULT]
 # Remove autoyast file after installation
-CLEAN_UP=True
+CLEAN_UP=False
 
 # Enable/disable debug log
 DEBUG=False
