Support initrd-inject for virt-install autoyast and use it by default.
Latest tumbleweed 20211130 failed to installed on ha6 only.
However, it works on another host. SLE15SP4 also works fine...

A new method --initrd-inject supported in virt-install.
Use this solution in CI and choose this by default.

--- a/deploy/scripts/config.ini
+++ b/deploy/scripts/config.ini
@@ -14,6 +14,9 @@ VIRT_INSTALL=True
 # Force to use vm-install in SLE12SP0 due to virt-install bug
 VM_INSTALL_DETECT=True
 
+# INITRD_INJECT for autoyast
+INITRD_INJECT=True
+
 # Local NFS server for autoyast
 NFS_ENABLED=True
 NFS_LOCATION=/var/lib/jenkins-work/ha-share/deploy/dummy_temp/nfs_share
